remates del refactoring

--- a/.github/workflows/jsonlint.yml
+++ b/.github/workflows/jsonlint.yml
@@ -67,6 +67,8 @@ jobs:
       - id: check-json
         name: Check JSON
         if: ${{ contains(github.event.inputs.kaos-files, '.json') && github.workspace }}/${{ github.event.inputs.kaos-files }}
+        env:
+           GH_TOKEN: ${{ github.token }}
         run: |
             # Invocamos la primera comprobación de base, sino se supera el proceso no continua
             # Extraemos el nombre del fichero
