--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -45,8 +45,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.KAOS_REPO_TOKEN }}
-    
+
+      # con esta parte suplimos que la imagen no disponga de la cli de GH    
+      - name: Install GH CLI
+        uses: ./.github/actions/install-gh-cli
+
       - id: python
         name: Setup Python
         uses: actions/setup-python@v5
@@ -60,6 +63,8 @@ jobs:
 
       - id: check-yaml
         name: Check YAML
+        env:
+           GH_TOKEN: ${{ github.token }}
         run: |
             # Invocamos la primera comprobación de base, sino se supera el proceso no continua
             # Ejecutamos el comando
@@ -104,7 +109,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.KAOS_REPO_TOKEN }}
+
+      # con esta parte suplimos que la imagen no disponga de la cli de GH    
+      - name: Install GH CLI
+        uses: ./.github/actions/install-gh-cli
+
       - id: handle-success-execution
         name: handle-success-execution
         env:
@@ -124,11 +133,14 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.KAOS_REPO_TOKEN }}
+      # con esta parte suplimos que la imagen no disponga de la cli de GH    
+      - name: Install GH CLI
+        uses: ./.github/actions/install-gh-cli
+
       - id: handle-failure-execution
         name: handle-failure-execution
         env:
-          GH_TOKEN: ${{ secrets.KAOS_REPO_TOKEN }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           echo "Error detected in process"
           echo "Created issue"
@@ -141,7 +153,7 @@ jobs:
     needs: [job-core, handle-success, handle_failure]
     if: ${{ always() }} 
     env:
-        GH_TOKEN: ${{ secrets.KAOS_ACTIONS_TOKEN }}
+        GH_TOKEN: ${{ github.token }}
     steps:
       - id: repo
         name: Checkout code
@@ -149,7 +161,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.KAOS_REPO_TOKEN }}
+
+      # con esta parte suplimos que la imagen no disponga de la cli de GH    
+      - name: Install GH CLI
+        uses: ./.github/actions/install-gh-cli
+
       - id: end-process
         name: Finaliza el workflow
         run: |
