--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -136,6 +136,7 @@ jobs:
       - id: repo
         name: Checkout code
         if: ${{ always() }}
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           
