--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -10,7 +10,7 @@ permissions:
   issues: write
 env:
   KAOS_MODULE: "[Ka0S] VERSION"
-  GH_TOKEN: ${{ secrets.KAOS_REPO_TOKEN }}
+  GH_TOKEN: ${{ github.token }}
   PATH_RESUME: "core/config/"
   KAOS_REPO: "/actions-runner/_work/kaos/kaos"
   KAOS_STEP_MODULE: ""
