--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -40,6 +40,8 @@ jobs:
   job-audit:
     runs-on: swarm-runners-scaleset
     needs: [job-core]
+    outputs:
+      results_path: ${{ steps.audit.outputs.results-path }}
     steps:
       - id: audit
         name: Execute audit script
@@ -53,10 +55,33 @@ jobs:
           use-sudo: true
           script-path: ${{ github.event.inputs.script-path || 'devops/core/host/test.sh' }}
           script-args: ${{ github.event.inputs.script-args || '' }}
+          remote-results-path: '/tmp/results/' # Ruta de ejemplo en el host remoto
+          local-results-path: '${{ env.KAOS_PATH_RESUME }}' # Ruta en el runner donde se copiarán los resultados
+
+  commit-results:
+    runs-on: swarm-runners-scaleset
+    needs: [job-audit]
+    if: success() && needs.job-audit.outputs.results_path != ''
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Commit and push results
+        run: |
+          echo "Uploading files to Audit update repository..."
+          git config --global user.name "${{ secrets.KAOS_BOT_NAME }}"
+          git config --global user.email "${{ secrets.KAOS_BOT_EMAIL }}"
+          git add ${{ needs.job-audit.outputs.results_path }}/*
+          if ! git diff --staged --quiet; then
+             git commit -m "[Ka0S] Uploading audit results for run ${{ github.run_id }}"
+             git push origin ${{ github.ref }}
+          else
+             echo "No changes to commit."
+          fi
 
   handle-success:
     runs-on: swarm-runners-scaleset
-    needs: [job-core, job-audit]
+    needs: [job-core, job-audit, commit-results]
     if: ${{ success() }}
     steps: 
       - id: handle-success-execution
@@ -84,8 +109,8 @@ jobs:
             
   end-workflow:
     runs-on: swarm-runners-scaleset
-    needs: [job-core, job-audit, handle-success, handle_failure]
-    if: ${{ always() }}
+    needs: [job-core, job-audit, handle-success, handle_failure, commit-results]
+    if: ${{ always() }} 
     env:
       GH_TOKEN: ${{ github.token }}
     steps:
