--- a/.github/workflows/kaos.yml
+++ b/.github/workflows/kaos.yml
@@ -6,10 +6,10 @@ on:
       - '**.js'
       - '**.yaml'
       - '**.yml'
-      - '**.json'
+      #- '**.json'
       - '**.md'
       - '**.py'
-      - '!audit/**'
+      #- '!audit/**'
     branches:
       - 'H*'
       - 'F*'
