--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -27,8 +27,7 @@ env:
 
 jobs:
   job-core:
-    runs-on: 
-      group: test
+    runs-on: swarm-runners-scaleset
     steps:
       - id: repo
         name: Checkout repository
