--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          
+
       - id: audit
         name: Execute audit script
         uses: ./.github/actions/ssh-exec
@@ -55,7 +55,7 @@ jobs:
 
   commit-results:
     runs-on: swarm-runners-scaleset
-    needs: [job-audit]
+    needs: [job-core]
     if: success() && needs.job-audit.outputs.results_path != ''
     steps:
       - name: Checkout repository
@@ -76,7 +76,7 @@ jobs:
 
   handle-success:
     runs-on: swarm-runners-scaleset
-    needs: [job-core, job-audit, commit-results]
+    needs: [job-core, commit-results]
     if: ${{ success() }}
     steps: 
       - id: handle-success-execution
@@ -94,7 +94,7 @@ jobs:
           
   handle_failure:
       runs-on: swarm-runners-scaleset
-      needs: [job-core, job-audit]
+      needs: [job-core]
       if: ${{ failure() }} 
       steps: 
         - id: check-execution
@@ -104,7 +104,7 @@ jobs:
             
   end-workflow:
     runs-on: swarm-runners-scaleset
-    needs: [job-core, job-audit, handle-success, handle_failure, commit-results]
+    needs: [job-core, handle-success, handle_failure, commit-results]
     if: ${{ always() }} 
     env:
       GH_TOKEN: ${{ github.token }}
