--- a/.github/actions/ssh-exec/action.yml
+++ b/.github/actions/ssh-exec/action.yml
@@ -34,49 +34,77 @@ inputs:
     description: 'Temporary directory on the remote host.'
     required: false
     default: '/tmp'
+  remote-results-path:
+    description: 'Path on the remote host where results are stored.'
+    required: false
+  local-results-path:
+    description: 'Path on the local runner to copy results to.'
+    required: false
+
+outputs:
+  results-path:
+    description: 'The path to the results on the local runner.'
+    value: ${{ steps.copy_results.outputs.path }}
 
 runs:
   using: "composite"
   steps:
-    - name: Execute SSH Command or Script
-      uses: appleboy/ssh-action@v1.2.2
+    - name: Prepare SSH key
+      shell: bash
+      run: |
+        echo "${{ inputs.key }}" > ${{ runner.temp }}/ssh_key
+        chmod 600 ${{ runner.temp }}/ssh_key
+
+    - name: Copy script to remote
+      if: inputs.script-path != ''
+      uses: appleboy/scp-action@v0.1.4
+      with:
+        host: ${{ inputs.host }}
+        username: ${{ inputs.username }}
+        key: ${{ inputs.key }}
+        port: ${{ inputs.port }}
+        source: "${{ inputs.script-path }}"
+        target: "${{ inputs.remote-tmp-dir }}"
+
+    - name: Execute remote script
+      if: inputs.script-path != ''
+      uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ inputs.host }}
         username: ${{ inputs.username }}
         key: ${{ inputs.key }}
         port: ${{ inputs.port }}
         script: |
-          if [[ -n "${{ inputs.script-path }}" ]]; then
-            # Logic for script execution
-            scp -o StrictHostKeyChecking=no -i ${{ runner.temp }}/ssh_key -P ${{ inputs.port }} ${{ inputs.script-path }} ${{ inputs.username }}@${{ inputs.host }}:${{ inputs.remote-tmp-dir }}
-            
-            REMOTE_SCRIPT_PATH="${{ inputs.remote-tmp-dir }}/$(basename ${{ inputs.script-path }})"
-            
-            ssh -o StrictHostKeyChecking=no -i ${{ runner.temp }}/ssh_key -p ${{ inputs.port }} ${{ inputs.username }}@${{ inputs.host }} "chmod +x $REMOTE_SCRIPT_PATH"
-            
-            EXEC_COMMAND="$REMOTE_SCRIPT_PATH ${{ inputs.script-args }}"
-            if [[ "${{ inputs.use-sudo }}" == "true" ]]; then
-              ssh -o StrictHostKeyChecking=no -i ${{ runner.temp }}/ssh_key -p ${{ inputs.port }} ${{ inputs.username }}@${{ inputs.host }} "echo '${{ inputs.pass }}' | sudo -S $EXEC_COMMAND"
-            else
-              ssh -o StrictHostKeyChecking=no -i ${{ runner.temp }}/ssh_key -p ${{ inputs.port }} ${{ inputs.username }}@${{ inputs.host }} "$EXEC_COMMAND"
-            fi
-
-            ssh -o StrictHostKeyChecking=no -i ${{ runner.temp }}/ssh_key -p ${{ inputs.port }} ${{ inputs.username }}@${{ inputs.host }} "rm $REMOTE_SCRIPT_PATH"
-
-          elif [[ -n "${{ inputs.command }}" ]]; then
-            # Logic for direct command execution
-            if [[ "${{ inputs.use-sudo }}" == "true" ]]; then
-              echo "${{ inputs.pass }}" | sudo -S ${{ inputs.command }}
-            else
-              ${{ inputs.command }}
-            fi
+          REMOTE_SCRIPT_PATH="${{ inputs.remote-tmp-dir }}/$(basename ${{ inputs.script-path }})"
+          chmod +x $REMOTE_SCRIPT_PATH
+          EXEC_COMMAND="$REMOTE_SCRIPT_PATH ${{ inputs.script-args }}"
+          if [[ "${{ inputs.use-sudo }}" == "true" ]]; then
+            echo '${{ inputs.pass }}' | sudo -S $EXEC_COMMAND
           else
-            echo "Error: Either 'command' or 'script-path' must be provided."
-            exit 1
+            $EXEC_COMMAND
+          fi
+          rm $REMOTE_SCRIPT_PATH
+
+    - name: Execute remote command
+      if: inputs.command != ''
+      uses: appleboy/ssh-action@v1.0.3
+      with:
+        host: ${{ inputs.host }}
+        username: ${{ inputs.username }}
+        key: ${{ inputs.key }}
+        port: ${{ inputs.port }}
+        script: |
+          if [[ "${{ inputs.use-sudo }}" == "true" ]]; then
+            echo "${{ inputs.pass }}" | sudo -S ${{ inputs.command }}
+          else
+            ${{ inputs.command }}
           fi
 
-    - name: Prepare SSH key
+    - name: Copy results from remote
+      id: copy_results
+      if: inputs.remote-results-path != '' && inputs.local-results-path != ''
       shell: bash
       run: |
-        echo "${{ inputs.key }}" > ${{ runner.temp }}/ssh_key
-        chmod 600 ${{ runner.temp }}/ssh_key
+        mkdir -p ${{ inputs.local-results-path }}
+        scp -o StrictHostKeyChecking=no -r -i ${{ runner.temp }}/ssh_key -P ${{ inputs.port }} ${{ inputs.username }}@${{ inputs.host }}:${{ inputs.remote-results-path }}/* ${{ inputs.local-results-path }}
+        echo "path=${{ inputs.local-results-path }}" >> $GITHUB_OUTPUT
