--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -21,7 +21,7 @@ permissions:
 
 env:
   KAOS_MODULE: "[Ka0S] Audit Host"
-  KAOS_PATH_RESUME: "audit/hosts/"
+  KAOS_PATH_RESUME: "audit/eresults/"
   KAOS_FILE_HOST: ${{ github.run_id }}
   KAOS_CODE: ${{ github.run_id }}
 
@@ -56,7 +56,7 @@ jobs:
   commit-results:
     runs-on: swarm-runners-scaleset
     needs: [job-core]
-    if: success() && needs.job-audit.outputs.results_path != ''
+    if: success() && needs.job-core.outputs.results_path != ''
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -66,7 +66,7 @@ jobs:
           echo "Uploading files to Audit update repository..."
           git config --global user.name "${{ secrets.KAOS_BOT_NAME }}"
           git config --global user.email "${{ secrets.KAOS_BOT_EMAIL }}"
-          git add ${{ needs.job-audit.outputs.results_path }}/*
+          git add ${{ needs.job-core.outputs.results_path }}/*
           if ! git diff --staged --quiet; then
              git commit -m "[Ka0S] Uploading audit results for run ${{ github.run_id }}"
              git push origin ${{ github.ref }}
