--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -109,6 +109,18 @@ jobs:
     env:
       GH_TOKEN: ${{ github.token }}
     steps:
+      - id: repo
+        name: Checkout code
+        if: ${{ always() }}
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          # token: ${{ secrets.KAOS_REPO_TOKEN }}
+
+      # con esta parte suplimos que la imagen no disponga de la cli de GH    
+      - name: Install GH CLI
+        uses: ./.github/actions/install-gh-cli
+        
       - id: end-process
         name: Finaliza el workflow
         run: |
