--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -1,4 +1,4 @@
-name: Ka0s C0re Host Audit logs
+name: Ka0s C0re SSH Host Connect
 on:
   workflow_dispatch:
     inputs:
@@ -120,7 +120,7 @@ jobs:
       # con esta parte suplimos que la imagen no disponga de la cli de GH    
       - name: Install GH CLI
         uses: ./.github/actions/install-gh-cli
-        
+
       - id: end-process
         name: Finaliza el workflow
         run: |
