--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -53,6 +53,13 @@ jobs:
           remote-results-path: '/tmp/results/' # Ruta de ejemplo en el host remoto
           local-results-path: '${{ env.KAOS_PATH_RESUME }}' # Ruta en el runner donde se copiarán los resultados
 
+      - name: Upload audit results
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: audit-results
+          path: ${{ env.KAOS_PATH_RESUME }}
+
   commit-results:
     runs-on: swarm-runners-scaleset
     needs: [job-core]
@@ -61,12 +68,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Download audit results
+        uses: actions/download-artifact@v4
+        with:
+          name: audit-results
+          path: ${{ env.KAOS_PATH_RESUME }}
+
       - name: Commit and push results
         run: |
           echo "Uploading files to Audit update repository..."
           git config --global user.name "${{ secrets.KAOS_BOT_NAME }}"
           git config --global user.email "${{ secrets.KAOS_BOT_EMAIL }}"
-          git add ${{ needs.job-core.outputs.results_path }}/*
+          git add ${{ env.KAOS_PATH_RESUME }}/*
           if ! git diff --staged --quiet; then
              git commit -m "[Ka0S] Uploading audit results for run ${{ github.run_id }}"
              git push origin ${{ github.ref }}
