--- a/.github/workflows/workflow-stats.yml
+++ b/.github/workflows/workflow-stats.yml
@@ -2,7 +2,7 @@ name: Ka0s Workflow Statistics Summary
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Ejecución diaria a las 00:00
+    - cron: '0 22 * * *'  # Ejecución diaria a las 00:00 UTC
   workflow_dispatch:  # Allow manual trigger
   
 permissions:
