Refactoring tiempo utc

--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -16,7 +16,7 @@ on:
         default: 'audit/eresults/'
 
   schedule:
-    - cron: '0 0 * * *'  # Run daily at midnight
+    - cron: '0 22 * * *'  # Run daily at midnight at UTC
 
 permissions:
   contents: write
