--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -152,8 +152,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           # Si todo ha ido correcto añadimos el contenido del fichero 
-          RNNUMBER=$(echo "${{ github.ref }}" | grep -o '[0-9]*')
-          gh issue comment $RNNUMBER --body "El proceso ha finalizado correctamente ${{ env.KAOS_CODE }}. El resultado está en el fichero ${{ env.KAOS_CODE }}.log"
+          gh issue comment ${{ needs.job-core.outputs.KAOS_NUMBER }} --body "El proceso ha finalizado correctamente ${{ env.KAOS_CODE }}. El resultado está en el fichero ${{ env.KAOS_CODE }}.log"
   handle_failure:
     runs-on: swarm-runners-scaleset
     needs: [job-core, handle-success]
@@ -179,8 +178,7 @@ jobs:
           echo "Created issue"
           gh issue create  --title "${{ env.KAOS_MODULE }} Error detected in ${{ env.KAOS_CODE }}" --label "bug" --body "Please check the logs 'https://github.com/Ka0s-Klaus/ka0s/actions/runs/${{ env.KAOS_CODE }}' for more information of error."
           echo "Add comment to origin target"
-          RNNUMBER=$(echo "${{ github.ref }}" | grep -o '[0-9]*')
-          gh issue comment $RNNUMBER --body "El proceso no ha finalizado correctamente ${{ env.KAOS_CODE }}. El resultado está en el fichero ${{ env.KAOS_CODE }}.log"
+          gh issue comment ${{ needs.job-core.outputs.KAOS_NUMBER }} --body "El proceso no ha finalizado correctamente ${{ env.KAOS_CODE }}. El resultado está en el fichero ${{ env.KAOS_CODE }}.log"
   end-workflow:
     runs-on: swarm-runners-scaleset
     needs: [job-core, handle-success, handle_failure]
@@ -203,6 +201,5 @@ jobs:
         name: Finaliza el workflow
         run: |
           echo "End process"
-          RNNUMBER=$(echo "${{ github.ref }}" | grep -o '[0-9]*')
-          gh issue comment $RNNUMBER --body "Se finaliza Ka0s ${{ env.KAOS_CODE }}"
+          gh issue comment ${{ needs.job-core.outputs.KAOS_NUMBER }} --body "Se finaliza Ka0s ${{ env.KAOS_CODE }}"
           gh workflow run inspector.yml --ref 'main' -f kaos-issue-id=$RNNUMBER -f kaos-workflow-id="${{ env.KAOS_CODE }}" -f kaos-user-start=""
