modificaciones de estructura

--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -13,8 +13,8 @@ on:
         default: 'Ka0sC0re'
 
 jobs:
-  do-something:
-    runs-on: ubuntu-latest
+  job-core:
+    runs-on: swarm-runners-scaleset
     steps:
       - name: Print iTop Data
         run: |
