--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -37,7 +37,7 @@ jobs:
     steps:
       - name: Close iTop Ticket on Success
         run: |
-          curl -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3"
+          curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3"
           -H "Content-Type: application/json"
           -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}"
           -d '{
@@ -61,7 +61,7 @@ jobs:
       - name: Update iTop Ticket on Failure
         run: |
           ERROR_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          curl -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3"
+          curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3"
           -H "Content-Type: application/json"
           -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}"
           -d "{
