--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -37,9 +37,9 @@ jobs:
     steps:
       - name: Close iTop Ticket on Success
         run: |
-          curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3"
-          -H "Content-Type: application/json"
-          -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}"
+          curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
+          -H "Content-Type: application/json" \
+          -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
           -d '{
             "operation": "core/update",
             "class": "UserRequest",
@@ -61,9 +61,9 @@ jobs:
       - name: Update iTop Ticket on Failure
         run: |
           ERROR_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3"
-          -H "Content-Type: application/json"
-          -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}"
+          curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
+          -H "Content-Type: application/json" \
+          -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
           -d "{
             \"operation\": \"core/update\",
             \"class\": \"UserRequest\",
