--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -38,9 +38,9 @@ jobs:
       - name: Close iTop Ticket on Success
         run: |
           curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
-          -H "Content-Type: application/json" \
+          -H "Content-Type: application/x-www-form-urlencoded" \
           -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
-          -d '{
+          --data-urlencode 'json_data={
             "operation": "core/update",
             "class": "UserRequest",
             "key": "SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}",
@@ -62,9 +62,9 @@ jobs:
         run: |
           ERROR_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
-          -H "Content-Type: application/json" \
+          -H "Content-Type: application/x-www-form-urlencoded" \
           -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
-          -d "{
+          --data-urlencode "json_data={
             \"operation\": \"core/update\",
             \"class\": \"UserRequest\",
             \"key\": \"SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}\",
