refactoring completo del dato

--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -48,7 +48,7 @@ jobs:
             "fields": {
               "status": "closed",
               "private_log": {
-                "message": "El workflow de GitHub ha finalizado con éxito. El requerimiento se cierra automáticamente."
+                "comment": "El workflow de GitHub ha finalizado con éxito. El requerimiento se cierra automáticamente."
               }
             }
           }'
@@ -71,7 +71,7 @@ jobs:
             \"output_fields\": \"id\",
             \"fields\": {
               \"private_log\": {
-                \"message\": \"El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}\"
+                \"comment\": \"El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}\"
               }
             }
           }"
