--- a/.github/workflows/ssh-connect.yml
+++ b/.github/workflows/ssh-connect.yml
@@ -84,6 +84,7 @@ jobs:
           echo "Uploading files to Audit update repository..."
           git config --global user.name "${{ secrets.KAOS_BOT_NAME }}"
           git config --global user.email "${{ secrets.KAOS_BOT_EMAIL }}"
+          git pull origin ${{ github.ref }} --force-with-lease
           git add ${{ env.KAOS_PATH_RESUME }}/*
           if ! git diff --staged --quiet; then
              git commit -m "[Ka0S] Uploading audit results for run ${{ github.run_id }}"
