--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -35,22 +35,20 @@ jobs:
     needs: job-core
     if: success()
     steps:
-      - name: Close iTop Ticket on Success
+      - name: Update iTop ticket on success
+        if: steps.run-main-logic.outcome == 'success'
         run: |
-          curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
-          --header "Content-Type: application/x-www-form-urlencoded" \
-          -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
-          --data-urlencode 'json_data={ "operation": "core/update", "class": "UserRequest", "key": "SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}", "comment": "El workflow de GitHub ha finalizado con éxito. El requerimiento se cierra automáticamente.", "output_fields": "id", "fields": { "status": "closed" } }'
+          curl -X POST '${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3' \
+          -H "Content-Type: application/x-www-form-urlencoded" \
+          --data-urlencode 'auth_user=${{ secrets.ITOP_USER }}' \
+          --data-urlencode 'auth_pwd=${{ secrets.ITOP_PASSWORD }}' \
+          --data-urlencode 'json_data={ "operation": "core/update", "class": "UserRequest", "key": "SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}", "output_fields": "id", "fields": { "status": "closed", "solution": "El workflow de GitHub ha finalizado con éxito. El requerimiento se cierra automáticamente." } }'
 
-  update-itop-on-failure:
-    runs-on: swarm-runners-scaleset
-    needs: job-core
-    if: failure()
-    steps:
-      - name: Update iTop Ticket on Failure
+      - name: Update iTop ticket on failure
+        if: steps.run-main-logic.outcome != 'success'
         run: |
-          ERROR_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
-          --header "Content-Type: application/x-www-form-urlencoded" \
-          -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
-          --data-urlencode "json_data={ \"operation\": \"core/update\", \"class\": \"UserRequest\", \"key\": \"SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}\", \"comment\": \"El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}\", \"output_fields\": \"id\", \"fields\": {} }"
+          curl -X POST '${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3' \
+          -H "Content-Type: application/x-www-form-urlencoded" \
+          --data-urlencode 'auth_user=${{ secrets.ITOP_USER }}' \
+          --data-urlencode 'auth_pwd=${{ secrets.ITOP_PASSWORD }}' \
+          --data-urlencode 'json_data={ "operation": "core/update", "class": "UserRequest", "key": "SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}", "output_fields": "id", "fields": { "solution": "El workflow de GitHub ha fallado. Por favor, revise los logs de la ejecución para más detalles." } }'
