--- a/core/b2b/core-services/elk/kustomization.yaml
+++ b/core/b2b/core-services/elk/kustomization.yaml
@@ -6,3 +6,6 @@ resources:
   - elasticsearch-statefulset.yaml
   - kibana-deployment.yaml
   - kibana-service.yaml
+  - logstash-configmap.yaml
+  - logstash-deployment.yaml
+  - logstash-service.yaml
