--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -27,8 +27,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Este es el paso principal de la automatización.
-      # Si este paso falla, el job 'update-itop' lo reflejará en el ticket.
       - name: Run automation script
         id: automation
         run: |
@@ -39,39 +37,21 @@ jobs:
   update-itop:
     runs-on: swarm-runners-scaleset
     needs: job-core
-    if: always() # Se ejecuta siempre, para poder reportar tanto éxito como fallo.
+    if: always()
     steps:
       - name: Update iTop on Success
         if: needs.job-core.outputs.status == 'success'
         run: |
-          curl -k -X POST '${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3' \
-            -H 'Content-Type: application/json' \
-            -d '{
-              "operation": "core/update",
-              "class": "UserRequest",
-              "key": "${{ github.event.inputs.itop_ticket_id }}",
-              "output_fields": "ref",
-              "auth_user": "${{ secrets.ITOP_API_USER }}",
-              "auth_pwd": "${{ secrets.ITOP_API_PASSWORD }}",
-              "fields": {
-                "status": "resolved",
-                "solution": "Solución provista por Asistencia. El workflow se ha ejecutado correctamente."
-              }
-            }'
+          curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
+          --header "Content-Type: application/x-www-form-urlencoded" \
+          -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
+          --data-urlencode 'json_data={ "operation": "core/update", "class": "UserRequest", "key": "SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}", "output_fields": "id", "fields": { "status": "resolved", "solution": "Solución provista por Asistencia. El workflow de GitHub ha finalizado con éxito." } }'
 
       - name: Update iTop on Failure
         if: needs.job-core.outputs.status == 'failure'
         run: |
-          curl -k -X POST '${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3' \
-            -H 'Content-Type: application/json' \
-            -d '{
-              "operation": "core/update",
-              "class": "UserRequest",
-              "key": "${{ github.event.inputs.itop_ticket_id }}",
-              "output_fields": "ref",
-              "auth_user": "${{ secrets.ITOP_API_USER }}",
-              "auth_pwd": "${{ secrets.ITOP_API_PASSWORD }}",
-              "fields": {
-                "solution": "Solución provista por Asistencia. El workflow ha fallado."
-              }
-            }'
+          ERROR_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
+          --header "Content-Type: application/x-www-form-urlencoded" \
+          -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
+          --data-urlencode "json_data={ \"operation\": \"core/update\", \"class\": \"UserRequest\", \"key\": \"SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}\", \"output_fields\": \"id\", \"fields\": { \"solution\": \"Solución provista por Asistencia. El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}\" } }"
