--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -31,8 +31,7 @@ jobs:
         id: automation
         run: |
           echo "Ejecutando la tarea automatizada..."
-          # Simula un fallo para probar la lógica de error. Elimina o comenta la siguiente línea para probar el éxito.
-          # exit 1
+          # exit 1 # Uncomment to test failure case
 
   update-itop:
     runs-on: swarm-runners-scaleset
@@ -45,7 +44,7 @@ jobs:
           curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
           --header "Content-Type: application/x-www-form-urlencoded" \
           -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
-          --data-urlencode 'json_data={ "operation": "core/update", "class": "UserRequest", "key": "SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}", "output_fields": "id", "fields": { "status": "resolved", "solution": "Solución provista por Asistencia. El workflow de GitHub ha finalizado con éxito." } }'
+          --data-urlencode 'json_data={ "operation": "core/update", "class": "UserRequest", "key": "SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}", "comment": "Solución provista por Asistencia. El workflow de GitHub ha finalizado con éxito.", "output_fields": "id", "fields": { "status": "resolved" } }'
 
       - name: Update iTop on Failure
         if: needs.job-core.outputs.status == 'failure'
@@ -54,4 +53,4 @@ jobs:
           curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
           --header "Content-Type: application/x-www-form-urlencoded" \
           -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
-          --data-urlencode "json_data={ \"operation\": \"core/update\", \"class\": \"UserRequest\", \"key\": \"SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}\", \"output_fields\": \"id\", \"fields\": { \"solution\": \"Solución provista por Asistencia. El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}\" } }"
+          --data-urlencode "json_data={ \"operation\": \"core/update\", \"class\": \"UserRequest\", \"key\": \"SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}\", \"comment\": \"Solución provista por Asistencia. El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}\", \"output_fields\": \"id\", \"fields\": {} }"
