--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -44,7 +44,13 @@ jobs:
           curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
           --header "Content-Type: application/x-www-form-urlencoded" \
           -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
-          --data-urlencode 'json_data={ "operation": "core/update", "class": "UserRequest", "key": "SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}", "comment": "Solución provista por Asistencia. El workflow de GitHub ha finalizado con éxito.", "output_fields": "id", "fields": { "status": "resolved" } }'
+          --data-urlencode 'json={
+            "operation": "core/apply_stimulus",
+            "class": "UserRequest",
+            "key": "${{ github.event.inputs.itop_ticket_id }}",
+            "stimulus": "ev_resolve",
+            "comment": "Solución provista por Asistencia. El workflow de GitHub ha finalizado con éxito."
+          }'
 
       - name: Update iTop on Failure
         if: needs.job-core.outputs.status == 'failure'
@@ -53,4 +59,13 @@ jobs:
           curl -k -X POST "${{ secrets.ITOP_URL }}/webservices/rest.php?version=1.3" \
           --header "Content-Type: application/x-www-form-urlencoded" \
           -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
-          --data-urlencode "json_data={ \"operation\": \"core/update\", \"class\": \"UserRequest\", \"key\": \"SELECT UserRequest WHERE id = ${{ github.event.inputs.itop_ticket_id }}\", \"comment\": \"Solución provista por Asistencia. El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}\", \"output_fields\": \"id\", \"fields\": {} }"
+          --data-urlencode "json={
+            \"operation\": \"core/update\",
+            \"class\": \"UserRequest\",
+            \"key\": \"${{ github.event.inputs.itop_ticket_id }}\",
+            \"fields\": {
+              \"public_log\": {
+                \"add_comment\": \"Solución provista por Asistencia. El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}\"
+              }
+            }
+          }"
