--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -41,35 +41,43 @@ jobs:
       - name: Update iTop on Success
         if: needs.job-core.result == 'success'
         run: |
+          JSON_PAYLOAD=$(cat <<EOF
+          {
+            "operation": "core/apply_stimulus",
+            "class": "UserRequest",
+            "key": "${{ github.event.inputs.itop_ticket_id }}",
+            "stimulus": "ev_resolve",
+            "comment": "Ticket resuelto automáticamente por GitHub Actions.",
+            "fields": {
+              "solution": "La automatización se ejecutó correctamente."
+            }
+          }
+          EOF
+          )
           curl -k -X POST "${{ secrets.ITOP_API_URL }}/webservices/rest.php?version=1.3" \
           -H "Content-Type: application/x-www-form-urlencoded" \
           -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
-          --data-urlencode "json_data={
-            \"operation\": \"core/apply_stimulus\", 
-            \"class\": \"UserRequest\", 
-            \"key\": \"${{ github.event.inputs.itop_ticket_id }}\", 
-            \"stimulus\": \"ev_resolve\", 
-            \"comment\": \"Ticket resuelto automáticamente por GitHub Actions.\",
-            \"fields\": {
-              \"solution\": \"La automatización se ejecutó correctamente.\"
-            }
-          }"
+          --data-urlencode "json_data=$JSON_PAYLOAD"
 
       - name: Update iTop on Failure
         if: needs.job-core.result == 'failure'
         run: |
           ERROR_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          JSON_PAYLOAD=$(cat <<EOF
+          {
+            "operation": "core/update",
+            "class": "UserRequest",
+            "key": "${{ github.event.inputs.itop_ticket_id }}",
+            "comment": "El workflow de GitHub ha fallado.",
+            "fields": {
+              "public_log": {
+                "add_comment": "El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}"
+              }
+            }
+          }
+          EOF
+          )
           curl -k -X POST "${{ secrets.ITOP_API_URL }}/webservices/rest.php?version=1.3" \
           --header "Content-Type: application/x-www-form-urlencoded" \
           -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
-          --data-urlencode "json_data={
-            \"operation\": \"core/update\",
-            \"class\": \"UserRequest\",
-            \"key\": \"${{ github.event.inputs.itop_ticket_id }}\",
-            \"comment\": \"El workflow de GitHub ha fallado.\",
-            \"fields\": {
-              \"public_log\": {
-                \"add_comment\": \"El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}\"
-              }
-            }
-          }"
+          --data-urlencode "json_data=$JSON_PAYLOAD"
