Add new doc to rest api itop

--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -71,7 +71,10 @@ jobs:
             "comment": "El workflow de GitHub ha fallado.",
             "fields": {
               "public_log": {
-                "add_comment": "El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}"
+                "add_item": {
+                  "message": "El workflow de GitHub ha fallado. Por favor, revise los logs para más detalles: ${ERROR_URL}",
+                  "format": "text"
+                }
               }
             }
           }
