--- a/.github/workflows/itop-triggered-workflow.yml
+++ b/.github/workflows/itop-triggered-workflow.yml
@@ -40,7 +40,16 @@ jobs:
     steps:
       - name: Update iTop on Success
         if: needs.job-core.result == 'success'
+        env:
+          ITOP_URL: ${{ secrets.ITOP_API_URL }}
+          ITOP_USER: ${{ secrets.ITOP_API_USER }}
+          ITOP_PASSWORD: ${{ secrets.ITOP_API_PASSWORD }}
         run: |
+          if [ -z "$ITOP_URL" ]; then
+            echo "::error::El secreto ITOP_API_URL no está configurado."
+            exit 1
+          fi
+          
           JSON_PAYLOAD=$(cat <<EOF
           {
             "operation": "core/apply_stimulus",
@@ -54,14 +63,23 @@ jobs:
           }
           EOF
           )
-          curl -k -X POST "${{ secrets.ITOP_API_URL }}/webservices/rest.php?version=1.3" \
+          curl -k -X POST "${ITOP_URL}/webservices/rest.php?version=1.3" \
           -H "Content-Type: application/x-www-form-urlencoded" \
-          -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
+          -u "${ITOP_USER}:${ITOP_PASSWORD}" \
           --data-urlencode "json_data=$JSON_PAYLOAD"
 
       - name: Update iTop on Failure
         if: needs.job-core.result == 'failure'
+        env:
+          ITOP_URL: ${{ secrets.ITOP_API_URL }}
+          ITOP_USER: ${{ secrets.ITOP_API_USER }}
+          ITOP_PASSWORD: ${{ secrets.ITOP_API_PASSWORD }}
         run: |
+          if [ -z "$ITOP_URL" ]; then
+            echo "::error::El secreto ITOP_API_URL no está configurado."
+            exit 1
+          fi
+
           ERROR_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           JSON_PAYLOAD=$(cat <<EOF
           {
@@ -80,7 +98,7 @@ jobs:
           }
           EOF
           )
-          curl -k -X POST "${{ secrets.ITOP_API_URL }}/webservices/rest.php?version=1.3" \
+          curl -k -X POST "${ITOP_URL}/webservices/rest.php?version=1.3" \
           --header "Content-Type: application/x-www-form-urlencoded" \
-          -u "${{ secrets.ITOP_API_USER }}:${{ secrets.ITOP_API_PASSWORD }}" \
+          -u "${ITOP_USER}:${ITOP_PASSWORD}" \
           --data-urlencode "json_data=$JSON_PAYLOAD"
